--- a/app/globals.css
+++ b/app/globals.css
@@ -27,8 +27,9 @@
     background-size: cover;
     background-position: center center;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-attachment: fixed;
+    
 }
 
 
@@ -39,4 +40,8 @@
 
 .asap{
     font-family: var(--font-asap);
+}
+
+.border-color{
+    --react-international-phone-border-color:'white'
 }
