--- a/app/globals.css
+++ b/app/globals.css
@@ -45,3 +45,9 @@
 .border-color{
     --react-international-phone-border-color:'white'
 }
+.container{
+    width: 100%;
+    max-width: 1450px;
+    padding:20px 0 20px 0 ;
+    margin: 0 auto;
+}
