background images changed

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,7 +22,7 @@
 
 
 .bg{
-    background-image: url('https://static.tildacdn.one/tild6433-3437-4636-b462-663033323164/cleaning-service-wor.jpg');
+    background-image: url('../images/jpg/hero-bg.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
